# FreeplayDatabase

./: .gitignore  CMakeLists.txt  README.md  database.c  printing.c  seedStatistics.py  statistics.c
database/: main.c
include/: bitsArray.h  bloonStats.h  compressedFile.h  defines.h  freeplayGroups.h  seedPrinting.h  seedSearching.h  seedStatistics.h  shuffle.h  threading.h  timing.h
makeGroups/: arrayifyGroups.py  checkBounds.py
printing/: main.c
reader/: readFromDatabase.c  readFromDatabase.py  readWrapper.py  read_test.c  reader.c  reader.h  seedStatistics.py
src/: bitsArray.c  bloonStats.c  compressedFile.c  freeplayGroups.c  main.c  seedPrinting.c  seedSearching.c  seedStatistics.c  shuffle.c  threading.c  timing.c
statistics/: main.c
